--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,79 @@
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==3.7.1
+bandit==1.9.2
+black==25.12.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+cloudpickle==3.1.2
+contourpy==1.3.3
+cycler==0.12.1
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-scikit-learn==1.3.2
+flake8==7.3.0
+fonttools==4.61.0
+h11==0.16.0
+httptools==0.7.1
+idna==3.11
+ImageIO==2.37.2
+Jinja2==3.1.6
 joblib==1.3.2
-numpy>=1.26.0
-prometheus-fastapi-instrumentator==6.1.0
-pandas==2.1.3
-matplotlib==3.8.2
-seaborn==0.13.0
-shap==0.43.0
+kiwisolver==1.4.9
+lazy_loader==0.4
 lime==0.2.0.1
-scipy>=1.10.0
+llvmlite==0.46.0
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.8.2
+mccabe==0.7.0
+mdurl==0.1.2
+mypy_extensions==1.1.0
+networkx==3.6.1
+numba==0.63.0
+numpy==1.26.4
+packaging==25.0
+pandas==2.1.3
+pathspec==0.12.1
+pillow==12.0.0
+platformdirs==4.5.1
+plotly==5.18.0
+prometheus-fastapi-instrumentator==6.1.0
+prometheus_client==0.23.1
+pycodestyle==2.14.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyflakes==3.4.0
+Pygments==2.19.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-multipart==0.0.6
+pytokens==0.3.0
+pytz==2025.2
+PyYAML==6.0.3
+requests==2.32.5
+rich==14.2.0
+scikit-image==0.25.2
+scikit-learn==1.3.2
+scipy==1.16.3
+seaborn==0.13.0
+setuptools==80.9.0
+shap==0.43.0
+six==1.17.0
+slicer==0.0.7
+sniffio==1.3.1
+starlette==0.27.0
+stevedore==5.6.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tifffile==2025.10.16
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.6.1
+uvicorn==0.24.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
+wheel==0.45.1
